--- a/assets/sass/components/base-components.scss
+++ b/assets/sass/components/base-components.scss
@@ -1,8 +1,10 @@
+@import "accordion";
 @import "buttons";
 @import "dropdown";
 @import "input";
+@import "modaal";
 @import "navigation";
-@import "typography";
-@import "tooltip";
-@import "table";
 @import "parallax-card";
+@import "table";
+@import "tooltip";
+@import "typography";
