--- a/assets/sass/components/_dropdown.scss
+++ b/assets/sass/components/_dropdown.scss
@@ -23,7 +23,8 @@
 #plain-dropdown-menu {
   position: absolute;
   top: 100%;
-  background: #EEE;
+  background: #fff;
+  box-shadow: 1px 1px 4px 2px rgba(51, 51, 51, 0.2);
   overflow: hidden;
   border-radius: 6px;
   list-style: none;
@@ -45,11 +46,7 @@
 }
 
 #plain-dropdown-menu li:hover {
-  background: #3498DB;
-}
-
-#plain-dropdown-menu li:hover a {
-  color: #FFF;
+  background: darken(#fff, 10%);
 }
 
 #plain-dropdown-menu a {
