--- a/assets/sass/components/base-components.scss
+++ b/assets/sass/components/base-components.scss
@@ -1,6 +1,7 @@
 @import "accordion";
 @import "buttons";
 @import "dropdown";
+@import "fonts";
 @import "input";
 @import "modaal";
 @import "navigation";
