--- a/assets/sass/components/_typography.scss
+++ b/assets/sass/components/_typography.scss
@@ -1,4 +1,3 @@
-/*!v3.2.2*/
 .text {
 
   &--highlight {
@@ -73,6 +72,7 @@
 h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility;
   margin: 0;
+  font-weight: normal;
 }
 
 h1 {
@@ -101,7 +101,7 @@ h6 {
 }
 
 p {
-  margin: 0 0 10px;
+  margin: 0;
 }
 
 input,
