--- a/assets/sass/mixins/_truncate-text.scss
+++ b/assets/sass/mixins/_truncate-text.scss
@@ -6,6 +6,6 @@
   text-overflow: $overflow; // values are: clip, ellipsis, or a string
 }
 
-.example-text {
-  @include truncateText();
-}
+//.example-text {
+//  @include truncateText();
+//}
