--- a/assets/sass/objects/_container.scss
+++ b/assets/sass/objects/_container.scss
@@ -1,11 +1,5 @@
 .container {
+  max-width: 1170px;
   margin: 0 auto;
-  padding: 0 10px;
-}
-
-.container-fluid {
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 0 15px;
 }
